--- a/prototipo sito/prototipo sito.html
+++ b/prototipo sito/prototipo sito.html
@@ -17,6 +17,7 @@
                 color : white;
                 font-family : 'Osvald';
                 float : right;
+                margin-right : 60px;
             }
             .barOriz{
                 display : inline;
@@ -62,19 +63,25 @@
         <div class = "banner">
                 <img src = "logo.jpg" style = "width : 200; height : 200; float : left">
                 <div class = "info">
+                    <p>Centro commerciale Brianza <br> Strada statale 35 Dei Giovi <br>20037 Paderno Dugnano</p>
+                    <a href =" https://www.google.com/maps/place/Centro+Commerciale+Brianza/@45.5745582,9.1777924,17z/data=!3m1!4b1!4m5!3m4!1s0x4786befdc78b0045:0x9279604ad7936b0b!8m2!3d45.5745545!4d9.1799811" target = "_blank">
+                        <img src = "mappaPos.PNG" style = "width : 200px; height : 125px">
+                    </a>
+                    <!--
                     <p>Centro commerciale Brianza</p>
                     <p>Strada Statale 35 Dei Giovi</p>
                     <p>20037 Paderno Dugnano (MI)</p>
                     <p>3928382848</p>
                     <p>tiramisu.paderno@gmail.com</p>
                     <p>tiramisupaderno</p>
+                    https://www.google.com/maps/place/Centro+Commerciale+Brianza/@45.5745582,9.1777924,17z/data=!3m1!4b1!4m5!3m4!1s0x4786befdc78b0045:0x9279604ad7936b0b!8m2!3d45.5745545!4d9.1799811 -->
                 </div>
         </div>
         <div class = "menu" >
             <ul style = "padding : 7px">
                 <li class = "barOriz"><a href="fHome.html" target = "frame">Home</a></li>
-                <li class = "barOriz"><a href="#news">Chi Siamo</a></li>
-                <li class = "barOriz"><a href="#contact">Contatti</a></li>
+                <li class = "barOriz"><a href="fChiSiamo.html" target = "frame">Chi Siamo</a></li>
+                <li class = "barOriz"><a href="fContatti.html" target = "frame">Contatti</a></li>
                 <li class = "barOriz"><a href="#about">Gallery</a></li>
             </ul>
         </div>
