--- a/prototipo sito/fHome.html
+++ b/prototipo sito/fHome.html
@@ -5,7 +5,7 @@
     <body>
         <div align = "center">
             <img src = "foto1.jpg" style = "width : 700px; height : 450px;">
-            <p>uedhfiehifuerhfiuehrifhreiuruihfieur <br> ofjiosdjfosfoisdfjosjfosiofsdijofsjdojsdofdsoijdfso <br> oifjoedrioefjoefoiofejoefroirorjfojrfeoieorjrjeoirefjojirjorfejeirj<br> oifjoedrioefjoefoiofejoefroirorjfojrfeoieorjrjeoirefjojirjorfejeirj<br> oifjoedrioefjoefoiofejoefroirorjfojrfeoieorjrjeoirefjojirjorfejeirj<br> oifjoedrioefjoefoiofejoefroirorjfojrfeoieorjrjeoirefjojirjorfejeirj<br> oifjoedrioefjoefoiofejoefroirorjfojrfeoieorjrjeoirefjojirjorfejeirj<br> oifjoedrioefjoefoiofejoefroirorjfojrfeoieorjrjeoirefjojirjorfejeirj</p>
+            <p style = "font-family : 'Osvald'">uedhfiehifuerhfiuehrifhreiuruihfieur <br> ofjiosdjfosfoisdfjosjfosiofsdijofsjdojsdofdsoijdfso <br> oifjoedrioefjoefoiofejoefroirorjfojrfeoieorjrjeoirefjojirjorfejeirj<br> oifjoedrioefjoefoiofejoefroirorjfojrfeoieorjrjeoirefjojirjorfejeirj<br> oifjoedrioefjoefoiofejoefroirorjfojrfeoieorjrjeoirefjojirjorfejeirj<br> oifjoedrioefjoefoiofejoefroirorjfojrfeoieorjrjeoirefjojirjorfejeirj<br> oifjoedrioefjoefoiofejoefroirorjfojrfeoieorjrjeoirefjojirjorfejeirj<br> oifjoedrioefjoefoiofejoefroirorjfojrfeoieorjrjeoirefjojirjorfejeirj</p>
         </div>
         
     </body>
