--- a/prototipo sito/prototipo sito.html
+++ b/prototipo sito/prototipo sito.html
@@ -34,7 +34,7 @@
                 background-color : black;
                 border-style : solid 2px;
                 border-color: rgba(236, 233, 17, 0.781);
-                height : 40px
+                height : 40px;
             }
             ul {
                 list-style-type: none;
@@ -64,7 +64,7 @@
                 <img src = "logo.jpg" style = "width : 200; height : 200; float : left">
                 <div class = "info">
                     <p>Centro commerciale Brianza <br> Strada statale 35 Dei Giovi <br>20037 Paderno Dugnano</p>
-                    <a href =" https://www.google.com/maps/place/Centro+Commerciale+Brianza/@45.5745582,9.1777924,17z/data=!3m1!4b1!4m5!3m4!1s0x4786befdc78b0045:0x9279604ad7936b0b!8m2!3d45.5745545!4d9.1799811" target = "_blank">
+                    <a href = "https://www.google.com/maps/place/Centro+Commerciale+Brianza/@45.5745582,9.1777924,17z/data=!3m1!4b1!4m5!3m4!1s0x4786befdc78b0045:0x9279604ad7936b0b!8m2!3d45.5745545!4d9.1799811" target = "_blank">
                         <img src = "mappaPos.PNG" style = "width : 200px; height : 125px">
                     </a>
                     <!--
@@ -77,12 +77,12 @@
                     https://www.google.com/maps/place/Centro+Commerciale+Brianza/@45.5745582,9.1777924,17z/data=!3m1!4b1!4m5!3m4!1s0x4786befdc78b0045:0x9279604ad7936b0b!8m2!3d45.5745545!4d9.1799811 -->
                 </div>
         </div>
-        <div class = "menu" >
+        <div class = "menu">
             <ul style = "padding : 7px">
                 <li class = "barOriz"><a href="fHome.html" target = "frame">Home</a></li>
                 <li class = "barOriz"><a href="fChiSiamo.html" target = "frame">Chi Siamo</a></li>
                 <li class = "barOriz"><a href="fContatti.html" target = "frame">Contatti</a></li>
-                <li class = "barOriz"><a href="#about">Gallery</a></li>
+                <li class = "barOriz"><a href="fGallery.html" target = "frame">Gallery</a></li>
             </ul>
         </div>
         <div class = "centro">
