--- a/prototipo sito/prototipo sito.html
+++ b/prototipo sito/prototipo sito.html
@@ -83,6 +83,7 @@
                 <li class = "barOriz"><a href="fChiSiamo.html" target = "frame">Chi Siamo</a></li>
                 <li class = "barOriz"><a href="fContatti.html" target = "frame">Contatti</a></li>
                 <li class = "barOriz"><a href="fGallery.html" target = "frame">Gallery</a></li>
+                <li class = "barOriz"><a href="fINosProd.html" target = "frame">I Nostri Prodotti</a></li>
             </ul>
         </div>
         <div class = "centro">
